Title no longer highlightable/selectable. loadTemplates now correctly called on page load instead of first input. Dates and ratings truncated for brevity and cleanliness.

--- a/project/static/css/index.css
+++ b/project/static/css/index.css
@@ -13,6 +13,8 @@ pre{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    pointer-events: none;
+    user-select: none;
 }
 
 a{
